# goo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: btree.rs  catalog.rs  engine.rs  error.rs  lib.rs  main.rs  pager.rs  value.rs
src/sql/: ast.rs  mod.rs  parser.rs  token.rs
tests/: sql.rs
