[package]
name = "ferrodb"
version = "0.1.0"
edition = "2021"
description = "A persistent SQL database engine built from scratch in Rust: pager, B+Tree, SQL parser, and query executor."

[[bin]]
name = "ferrodb"
path = "src/main.rs"

[lib]
name = "ferrodb"
path = "src/lib.rs"

[profile.release]
opt-level = 3
